--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,1 +1,16 @@
-
+server:
+  port: 9093
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/ssm?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Chongqing
+    username: root
+    password: 123233
+  application:
+    name: user-service # 服务名，作为服务的id使用
+mybatis:
+  type-aliases-package: com.dongfeng.user.pojo
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:10086/eureka
